[package]
name = "payments_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
csv-async = { version = "1.3.0", features = ["tokio"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
clap = { version = "4.5.27", features = ["derive"] }
